# fire-car

./: .gitignore  mlx90614_reader_simple.py  mlx90614_reader_simple.sh  start_gmapping.py  test_fire_source.py  test_serial.py  test_sig.py
.claude/: settings.local.json
src/mlx90614_driver/: package.xml  setup.py  任务完成记录.md
src/mlx90614_driver/config/: mlx90614_serial.yaml
src/mlx90614_driver/launch/: mlx90614_serial.launch.py
src/mlx90614_driver/mlx90614_driver/: mlx90614_node.py
src/mlx90614_driver/mlx90614_driver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/mlx90614_reader/: mlx90614_reader.py  package.xml  setup.cfg  setup.py
src/mlx90614_reader/launch/: mlx90614_reader.launch.py
src/mlx90614_reader/mlx90614_reader/: __init__.py  mlx90614_reader.py
src/mlx90614_reader/mlx90614_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch.py
src/slam_gmapping/: setup.py
src/slam_gmapping/launch/: slam_gmapping.launch.py  slam_gmapping_launch.py
src/slam_gmapping/params/: slam_gmapping.yaml
src/stm32_driver/: package.xml  setup.cfg  setup.py
src/stm32_driver/config/: stm32_motor.yaml
src/stm32_driver/launch/: motor_driver.launch.py
src/stm32_driver/stm32_driver/: debug_stm32_driver.py  (+1 more)
src/yahboomcar_avoidance/: package.xml  setup.cfg  setup.py
src/yahboomcar_mapping/: package.xml  setup.cfg  setup.py
src/yahboomcar_nav/: package.xml  setup.py
src/yahboomcar_nav/config/: navigation.yaml
src/yahboomcar_nav/launch/: laser_bringup_gmapping_launch.py  map_gmapping_launch.py  navigation_launch.py  save_map_launch.py  start_navigation.bat  start_navigation.py
src/yahboomcar_nav/maps/: map.pgm
src/yahboomcar_nav/rviz/: map_view.rviz
(+28 files in other folders)
