<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yahboomcar_nav</name>
  <version>0.0.0</version>
  <description>Navigation package for robot</description>
  <maintainer email="cat@todo.com">cat</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ydlidar_ros2_driver</exec_depend>
  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>stm32_driver</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
